# easy-photo-backup-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  LicenseTemplate.txt  README.md
.github/workflows/: android.yml  build.yml  check-clang-format.yml  check-cppcheck.yml  run-cppcheck.yml
ClientCli/: CMakeLists.txt
ClientCli/src/: main.cpp
ClientShared/: CMakeLists.txt
ClientShared/include/client_shared/: client_storage.h  file_list_cache.h  file_send_utils.h  pairing_interactive_requests.h  request_answers.h  requests.h  send_files_interactive_request.h  test_full_file_backup.h
ClientShared/include/client_shared/example/: example.h
ClientShared/src/: client_storage.cpp  file_list_cache.cpp  file_send_utils.cpp  pairing_interactive_request.cpp  pairing_interactive_requests.cpp  requests.cpp  send_files_interactive_request.cpp  test_full_file_backup.cpp
ClientShared/src/example/: example.cpp
CommonShared/: CMakeLists.txt
CommonShared/include/common_shared/: hash_utils.h  template_utils.h
CommonShared/include/common_shared/blabla/: asdf.h
CommonShared/include/common_shared/bstorage/: storage.h  value.h
CommonShared/include/common_shared/cryptography/: cipher-functions.h  dh-functions.h  erasable-data.h  hash-functions.h  keypair.h  random.h
CommonShared/include/common_shared/cryptography/noise/: cipher_types.h  cipher_utils.h  handshake_types.h  noise_ik_handshake.h  noise_kk_handshake.h  noise_xx_handshake.h  types.h  utils.h
CommonShared/include/common_shared/cryptography/noise/internal/: handshake_utils.h  message_patterns.h  utils.h
CommonShared/include/common_shared/cryptography/primitives/: cipher_functions.h  dh_functions.h  hash_functions.h
CommonShared/include/common_shared/cryptography/types/: cipher_types.h  dh_types.h  hash_types.h
CommonShared/include/common_shared/cryptography/utils/: connection_id_utils.h  crypto_wipe.h  erasable_data.h  keypair.h  random.h  short_authentification_string_utils.h
CommonShared/include/common_shared/debug/: assert.h  debug_print_helpers.h  log.h
CommonShared/include/common_shared/files/: file_utils.h
CommonShared/include/common_shared/network/: protocol.h  raw_sockets.h  utils.h
CommonShared/include/common_shared/nsd/: nsd_client.h  nsd_server.h  shared_types.h  utils.h  utils_internal.h
CommonShared/include/common_shared/serialization/: number_serialization.h  raw_data_serialization.h  serialization_helpers.h  string_serialization.h
CommonShared/include/common_shared/storage/: lmdb_cursor.h  lmdb_database.h  lmdb_environment.h  lmdb_helpers.h  lmdb_return_codes.h  lmdb_transaction.h
CommonShared/src/: hash_utils.cpp
CommonShared/src/blabla/: asdf.cpp
CommonShared/src/bstorage/: storage.cpp  value.cpp
CommonShared/src/cryptography/: cipher-functions.cpp  dh-functions.cpp  erasable-data.cpp  hash-functions.cpp  keypair.cpp  random.cpp
CommonShared/src/cryptography/noise/: cipher_utils.cpp  noise_ik_handshake.cpp  noise_kk_handshake.cpp  noise_xx_handshake.cpp  utils.cpp
CommonShared/src/cryptography/noise/internal/: handshake_utils.cpp  message_patterns.cpp  utils.cpp
CommonShared/src/cryptography/primitives/: cipher_functions.cpp  dh_functions.cpp  hash_functions.cpp
CommonShared/src/cryptography/utils/: connection_id_utils.cpp  crypto_wipe.cpp  erasable_data.cpp  keypair.cpp  random.cpp  short_authentification_string_utils.cpp
CommonShared/src/debug/: assert.cpp  debug_print_helpers.cpp  log.cpp
CommonShared/src/files/: file_utils.cpp
CommonShared/src/network/: utils.cpp
CommonShared/src/nsd/: nsd_client.cpp  nsd_server.cpp  utils_internal.cpp
CommonShared/src/serialization/: asdf.cpp  number_serialization.cpp  raw_data_serialization.cpp  serialization_helpers.cpp  string_serialization.cpp
CommonShared/src/storage/: lmdb_cursor.cpp  lmdb_database.cpp  lmdb_environment.cpp  lmdb_helpers.cpp  lmdb_return_codes.cpp  lmdb_transaction.cpp
ServerCli/: CMakeLists.txt
ServerCli/src/: main.cpp
ServerShared/: CMakeLists.txt
ServerShared/include/server_shared/: file_receive_utils.h  pairing_interactive_request.h  request_answers.h  requests.h  send_files_interactive_request.h  server_storage.h  tcp_server.h
ServerShared/include/server_shared/example/: example.h
ServerShared/src/: file_receive_utils.cpp  pairing_interactive_request.cpp  request_answers.cpp  requests.cpp  send_files_interactive_request.cpp  server_storage.cpp  tcp_server.cpp
ServerShared/src/example/: example.cpp
Tests/: CMakeLists.txt
Tests/include/tests/: assert_helper.h  helper_utils.h  test_helper_functions.h
Tests/src/: helper_utils.cpp  main.cpp  testCryptographyHashFunctions.cpp  test_helper_functions.cpp
Tests/src/bstorage/: test_bstorage_value.cpp
Tests/src/cryptography/: testDhFunctions.cpp  testHashFunctions.cpp  test_cipher_functions.cpp  test_erasable_data.cpp  test_hash_functions.cpp  test_random.cpp
Tests/src/cryptography/noise/: test_noise_ik_handshake.cpp  test_noise_kk_handshake.cpp  test_noise_message_patterns.cpp  test_noise_utils.cpp  test_noise_xx_handshake.cpp
Tests/src/cryptography/primitives/: test_cipher_functions.cpp  test_dh_functions.cpp  test_hash_functions.cpp
Tests/src/cryptography/utils/: test_erasable_data.cpp  test_random.cpp  test_short_authentification_string_utils.cpp
Tests/src/file_exchange/: test_file_send_receive_utils.cpp  test_file_utils.cpp
Tests/src/serialization/: test_number_serialization.cpp
Tests/src/storage/: test_lmdb_classes.cpp  test_lmdb_helpers.cpp  test_lmdb_wrappers.cpp
tools/validate/: cppcheck.sh  pre-commit.sh  reformat.sh  run-clang-format.py
